# Polinom

./: README.md
Polinom/: CMakeLists.txt
Polinom/APPS/app_Polinom/: CMakeLists.txt  Func_Polinom.h  Main_Polinom.cpp
Polinom/APPS/app_Test/: CMakeLists.txt
Polinom/LIBS/lib_For_Polinom/: CMakeLists.txt  Main_Lib.cpp  func_lib.h  lib_func.h
Polinom/LIBS/lib_Test/: CMakeLists.txt  Test.cpp
Polinom/LIBS/lib_hash_table/: CMakeLists.txt  lib_hash_table.cpp  lib_hash_table.h
Polinom/LIBS/lib_interface/: CMakeLists.txt  lib_interface.cpp  lib_interface.h
Polinom/LIBS/lib_list/: CMakeLists.txt  lib_list.cpp  lib_list.h
Polinom/LIBS/lib_list_table/: CMakeLists.txt  lib_list_table.cpp  lib_list_table.h
Polinom/LIBS/lib_sort_array_table/: CMakeLists.txt  lib_sort_array_table.cpp  lib_sort_array_table.h
Polinom/LIBS/lib_table_array/: CMakeLists.txt  lib_array_table.cpp  lib_array_table.h
